--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+def DEFAULT_SUPPORT_LIB_VERSION = '27.1.0'
+
 buildscript {
     repositories {
         jcenter()
@@ -9,6 +11,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    ext {
+        supportLibVersion = project.hasProperty('supportLibVersion') ? project.supportLibVersion : DEFAULT_SUPPORT_LIB_VERSION
     }
 }
 
