--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,12 +3,10 @@ apply plugin: 'com.android.library'
 def DEFAULT_COMPILE_SDK_VERSION = 27
 def DEFAULT_BUILD_TOOLS_VERSION = "27.0.3"
 def DEFAULT_TARGET_SDK_VERSION = 27
-def DEFAULT_SUPPORT_LIB_VERSION = '27.1.0'
 
 android {
-    compileSdkVersion = project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
-    buildToolsVersion = project.hasProperty('buildToolsVersion') ? project.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
-    androidSupportVersion = project.hasProperty('supportLibVersion') ? project.supportLibVersion : DEFAULT_SUPPORT_LIB_VERSION
+    compileSdkVersion project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
+    buildToolsVersion project.hasProperty('buildToolsVersion') ? project.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
 
     defaultConfig {
         minSdkVersion 16
@@ -45,9 +43,9 @@ dependencies {
 
     implementation 'com.facebook.react:react-native:+'
 
-    implementation "com.android.support:support-annotations:$androidSupportVersion"
-    implementation "com.android.support:support-v4:$androidSupportVersion"
-    implementation "com.android.support:appcompat-v7:$androidSupportVersion"
+    implementation "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
 
     implementation ('io.scanbot:sdk-package-ui:1.33.3') {
         exclude group: 'com.intellij', module: 'annotations'
